# HaskellKatas

./: .gitignore  README.md  stack.yaml
bank-kata/: bank-kata.cabal  stack.yaml
bank-kata/app/: Main.hs
bank-kata/src/: Bank.hs
bank-kata/test/: BankSpec.hs
mars-rover-kata/: mars-rover-kata.cabal
mars-rover-kata/.stack-work/install/x86_64-osx/lts-9.6/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  hspec-2.4.4-Ct0Af2AzisB8bPqGMHHFvj  hspec-core-2.4.4-Ezb0jq4rRfBJWZtpolvs1E  hspec-discover-2.4.4-99Suq6sFZ1T6o4isjc43TZ  hspec-expectations-0.8.2-DujBeQFEMmfJJRLad7XQgd  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  quickcheck-io-0.2.0-4pLO1WRxoBW9gt8EnME0zS  random-1.1-9tceXaeYIMZ4JrKq20Egog  setenv-0.1.1.3-8dEhk6JWvlmCmVyBammSpu  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  tf-random-0.5-CJZw1ZWS5MOJlR60HqKEZL
mars-rover-kata/.stack-work/install/x86_64-osx/lts-9.6/8.0.2/lib/x86_64-osx-ghc-8.0.2/mars-rover-kata-0.1.0.0-5Pd4dL4uWdU9rrNg9FmkeA/: Rover.dyn_hi  Rover.hi
mars-rover-kata/.stack-work/install/x86_64-osx/lts-9.6/8.0.2/pkgdb/: mars-rover-kata-0.1.0.0-5Pd4dL4uWdU9rrNg9FmkeA.conf  package.cache
mars-rover-kata/app/: Main.hs
mars-rover-kata/src/: Rover.hs
mars-rover-kata/test/: RoverSpec.hs
